sprint 3: api da exchange, atualização da api do e-mail
